--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ html, body, #root {
   margin: 5px 0;
 }
 
-.costForm {
+.costForm, .costList {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,6 +93,8 @@ html, body, #root {
 .costItem {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .costItem > * {
