--- a/app/src/App.css
+++ b/app/src/App.css
@@ -67,6 +67,7 @@ button:active {
 
 .monthContainer {
   display: flex;
+  height: 100%;
 }
 
 .costs {
@@ -76,6 +77,7 @@ button:active {
   box-sizing: border-box;
   flex-basis: 40%;
   padding: 10px;
+  height: 100%;
 }
 
 .costInput {
@@ -105,6 +107,7 @@ button:active {
 
 .costList {
   overflow-y: scroll;
+  margin-bottom: 10px;
 }
 
 .costList::-webkit-scrollbar {
